# ark-cli

./: CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: pypi-publish.yml  release.yml
ark_cli/: __init__.py  cli.py  model_client.py  search_client.py  tos_client.py
